--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 <center>
-<h1>Hello World</h1>
-<big>MECMM</big>
+<h6>404/h6>
+<h1>Sorry, the page not found./h1>
 </center>  
 </body>
 </html>
