--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 <center>
-<h6>404/h6>
-<h1>Sorry, the page not found./h1>
+<h0>404</h0>
+<h1>Sorry, the page not found.</h1>
 </center>  
 </body>
 </html>
